# LiVerse

./: .env.example  .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  install-linux.sh  install-windows.ps1  pyproject.toml  run-liverse.cmd
models/: README.md
slide_display/: operator.css  operator.html  operator.js
tools/: __init__.py  analyze_vosk_probe_logs.py  holyrics.py  slide_server.py  vosk_grammar_probe.py
